webui: fix overflow content in tablet

--- a/module/webroot/styles.css
+++ b/module/webroot/styles.css
@@ -252,8 +252,10 @@ label {
     background: white;
     padding: 20px;
     border-radius: 10px;
-    max-width: 800px;
+    max-width: 600px;
     width: 75vw;
+    max-height: 90vh;
+    overflow-y: auto;
     position: relative;
     overflow-wrap: anywhere;
 }
